Change ad testimonials.

--- a/r2/r2/templates/selfserveblurb.html
+++ b/r2/r2/templates/selfserveblurb.html
@@ -108,6 +108,42 @@ from decimal import Decimal
             ##Javascript takes care of everything else
             ##Try and keep each the same length, if at all possible, otherwise it looks odd on smaller ones
             <div id="testimonial-holder">
+                <div class="testimonial">
+                    <q>We&#39;ve run reddit ad campaigns for several clients and have found that these ads have proven to be a relatively inexpensive way to drive higher quality, engaged traffic to your site as well as gain a unique insight into the thoughts, questions, and concerns that your potential customers may have.</q>
+                    <cite>-Adam Hodson,&#32;<a href="http://www.bricksandmortarweb.com/" target="blank" rel="nofollow">President, Bricks &amp; Mortar Creative</a></cite>
+                </div>
+
+                <div class="testimonial">
+                    <q>I think promoting on reddit is a worthwhile investment for anyone looking to get recognition and sales. reddit gives you almost an unparalleled ability to target exactly who your market is.</q>
+                    <cite>-Nick DeMao, Owner,&#32;<a href="https://www.etsy.com/shop/WoodEyesWoodworks/about?ref=announce" target="blank" rel="nofollow">WoodEyesWoodworks</a></cite>
+                </div>
+
+                <div class="testimonial">
+                    <q>The ads were extremely easy to setup and we loved the discussion our ad generated with our targeted sub board. It not only increased sales, but was a channel for valuable feedback from our consumers. </q>
+                    <cite>-Casey Allen , Co-Founder,&#32;<a href="http://www.huntgathersnack.com/" target="blank" rel="nofollow">Hunt.Gather.Snack.</a></cite>
+                </div>
+
+
+                <div class="testimonial">
+                    <q>reddit has been far and away both the most effective and cost-effective tool we&#39;ve tried for driving traffic to our site.</q>
+                    <cite>-Brian Krieger, CEO,&#32;<a href="http://www.minnalife.com/" target="blank" rel="nofollow">Minna Life</a></cite>
+                </div>
+
+                <div class="testimonial">
+                    <q>reddit advertising is very simple to set up, to the extent that it makes you wonder what the Google AdWords people are smoking.</q>
+                    <cite>-Cliff Harris, Owner/Director,&#32;<a href="http://www.positech.co.uk/" target="blank" rel="nofollow">Positech Games</a></cite>
+                </div>
+
+                <div class="testimonial">
+                    <q>If you have a target market that overlaps heavily with the users of a subreddit, then there&#39;s probably no more efficient way to reach that market than advertising on reddit. If your ad is genuine and you&#39;re providing real value, you&#39;ll get a very positive response.</q>
+                    <cite>-Jeremy Scheff, Owner,&#32;<a href="http://basketball-gm.com/" target="blank" rel="nofollow">Basketball GM</a></cite>
+                </div>
+
+                <div class="testimonial">
+                    <q>At a .75 cpm reddit ads are a complete steal, and are also unique among ads. They&#39;re not FB ads, which are obnoxious, and they&#39;re not Google Adwords or context-based ads, because they have pictures and you get to choose the context--and join in the conversation. People can comment, and you as a company can comment back, which really puts the &ldquo;direct&rdquo; in direct advertising. They are like native ads, before those were cool.</q>
+                    <cite>-Samier Saeed, Developer,&#32;<a href="https://trubrain.com/" target="blank" rel="nofollow">truBrain</a></cite>
+                </div>
+
                 <div class="testimonial"><q>My reddit ad (above) has yielded the highest ROI (by far) compared to the
                     other ad platforms&hellip;</q>
                     <cite>-<a
