Add location to PromotedLinkTraffic table.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -4974,6 +4974,8 @@ div.timeseries span.title {
 }
 
 .traffic-table.promocampaign-table {
+    margin: 10px;
+
     thead th {
         text-align: right;
         padding: 0 5px;
@@ -5044,6 +5046,12 @@ div.timeseries span.title {
 
 .promo-traffic-live {
     background-color: #EFF7FF;
+
+    td {
+        max-width: 150px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
 }
 
 .promo-traffic-settings-instructions {
