--- a/r2/r2/templates/promotedlinktraffic.html
+++ b/r2/r2/templates/promotedlinktraffic.html
@@ -112,6 +112,7 @@
         <th>${_("start")}</th>
         <th>${_("end")}</th>
         <th>${_("target")}</th>
+        <th>${_("location")}</th>
         <th>${_("budget")}</th>
         <th>${_("spent")}</th>
         <th>${_("impressions")}</th>
@@ -129,6 +130,7 @@
               <td>${camp['start']}</td>
               <td>${camp['end']}</td>
               <td>${camp['target']}</td>
+              <td title="${camp['location']}">${camp['location']}</td>
               <td>${camp['budget']}</td>
               <td>${camp['spent']}</td>
               <td>${camp['impressions']}</td>
