Move help text to infobar.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -5449,6 +5449,10 @@ div #campaign-field {
 
 .create-promotion .infobar {
     margin: 5px;
+    
+    a {
+        white-space: nowrap;
+    }
 }
 
 .create-promo {
