promotelinkform: Increase default budget to $50.

--- a/r2/r2/templates/promotelinkform.html
+++ b/r2/r2/templates/promotelinkform.html
@@ -369,7 +369,8 @@ ${self.javascript_setup()}
                       style="width:auto"
                       onchange="r.sponsored.on_bid_change()"
                       onkeyup="r.sponsored.on_bid_change()"
-                      value="${format_decimal(5 * thing.min_bid, format='.00', locale=c.locale)}"
+                      value="${'%.2f' % thing.default_bid}"
+                      data-default_bid="${thing.default_bid}"
                       data-min_bid="${thing.min_bid}"
                       data-base_cpm="${thing.author.cpm_selfserve_pennies}"
                       data-geotarget_country_cpm="${g.cpm_selfserve_geotarget_country.pennies}"
