--- a/r2/r2/templates/selfserveblurb.html
+++ b/r2/r2/templates/selfserveblurb.html
@@ -70,7 +70,7 @@ from decimal import Decimal
                 <h2>Connect with customers</h2>
                 <p>Sponsored posts include a &ldquo;comments&rdquo; section, allowing advertisers to chat with redditors that have questions and comments about their ads in real-time. Add value to your ad by answering questions your target consumer has about your campaign!</p>
 
-                <a href="wiki/selfserve#wiki_what_are_the_best_practices_for_reddit_advertising.3F">Best practices recommendations for reddit advertising</a>
+                <a href="/wiki/selfserve#wiki_what_are_the_best_practices_for_reddit_advertising.3F">Best practices recommendations for reddit advertising</a>
             </div>
         </div>
         <div class="right-col column">
@@ -103,29 +103,8 @@ from decimal import Decimal
             <div class="testimonial-title">see what people are saying</div>
             <div class="testimonial-col">
                 <div class="testimonial">
-                    <q>We&#39;ve run reddit ad campaigns for several clients and have found that these ads have proven to be a relatively inexpensive way to drive higher quality, engaged traffic to your site as well as gain a unique insight into the thoughts, questions, and concerns that your potential customers may have.</q>
-                    <cite>-Adam Hodson,&#32;<a href="http://www.bricksandmortarweb.com/" target="blank" rel="nofollow">President, Bricks &amp; Mortar Creative</a></cite>
-                </div>
-
-                <div class="testimonial">
-                    <q>If you have a target market that overlaps heavily with the users of a subreddit, then there&#39;s probably no more efficient way to reach that market than advertising on reddit. If your ad is genuine and you&#39;re providing real value, you&#39;ll get a very positive response.</q>
-                    <cite>-Jeremy Scheff, Owner,&#32;<a href="http://basketball-gm.com/" target="blank" rel="nofollow">Basketball GM</a></cite>
-                </div>
-
-                <div class="testimonial">
-                    <q>At a .75 cpm reddit ads are a complete steal, and are also unique among ads. They&#39;re not FB ads, which are obnoxious, and they&#39;re not Google Adwords or context-based ads, because they have pictures and you get to choose the context--and join in the conversation. People can comment, and you as a company can comment back, which really puts the &ldquo;direct&rdquo; in direct advertising. They are like native ads, before those were cool.</q>
-                    <cite>-Samier Saeed, Developer,&#32;<a href="https://trubrain.com/" target="blank" rel="nofollow">truBrain</a></cite>
-                </div>
-            </div>
-            <div class="testimonial-col">
-                <div class="testimonial">
-                    <q>I think promoting on reddit is a worthwhile investment for anyone looking to get recognition and sales. reddit gives you almost an unparalleled ability to target exactly who your market is.</q>
-                    <cite>-Nick DeMao, Owner,&#32;<a href="https://www.etsy.com/shop/WoodEyesWoodworks/about?ref=announce" target="blank" rel="nofollow">WoodEyesWoodworks</a></cite>
-                </div>
-
-                <div class="testimonial">
-                    <q>The ads were extremely easy to setup and we loved the discussion our ad generated with our targeted sub board. It not only increased sales, but was a channel for valuable feedback from our consumers. </q>
-                    <cite>-Casey Allen , Co-Founder,&#32;<a href="http://www.huntgathersnack.com/" target="blank" rel="nofollow">Hunt.Gather.Snack.</a></cite>
+                    <q>We&#39;re looking forward to continuing our experiment with reddit advertising -- In less than a month we&#39;re seeing better responses, statistics and engagement from the reddit community. We&#39;re looking forward to making more of an investment going forward.</q>
+                    <cite>-Kate Gardiner, Director, Social Media &amp; Audience Engagement, &#32;<a href="http://www.newsweek.com/" target="blank" rel="nofollow">Newsweek</a></cite>
                 </div>
 
                 <div class="testimonial">
@@ -134,8 +113,34 @@ from decimal import Decimal
                 </div>
 
                 <div class="testimonial">
+                    <q>At a .75 cpm reddit ads are a complete steal, and are also unique among ads. They&#39;re not FB ads, which are obnoxious, and they&#39;re not Google Adwords or context-based ads, because they have pictures and you get to choose the context--and join in the conversation. People can comment, and you as a company can comment back, which really puts the &ldquo;direct&rdquo; in direct advertising. They are like native ads, before those were cool.</q>
+                    <cite>-Samier Saeed, Developer,&#32;<a href="https://trubrain.com/" target="blank" rel="nofollow">truBrain</a></cite>
+                </div>
+
+                <div class="testimonial">
                     <q>reddit advertising is very simple to set up, to the extent that it makes you wonder what the Google AdWords people are smoking.</q>
                     <cite>-Cliff Harris, Owner/Director,&#32;<a href="http://www.positech.co.uk/" target="blank" rel="nofollow">Positech Games</a></cite>
+                </div>
+            </div>
+            <div class="testimonial-col">
+                <div class="testimonial">
+                    <q>If you have a target market that overlaps heavily with the users of a subreddit, then there&#39;s probably no more efficient way to reach that market than advertising on reddit. If your ad is genuine and you&#39;re providing real value, you&#39;ll get a very positive response.</q>
+                    <cite>-Jeremy Scheff, Owner,&#32;<a href="http://basketball-gm.com/" target="blank" rel="nofollow">Basketball GM</a></cite>
+                </div>
+
+                <div class="testimonial">
+                    <q>I think promoting on reddit is a worthwhile investment for anyone looking to get recognition and sales. reddit gives you almost an unparalleled ability to target exactly who your market is.</q>
+                    <cite>-Nick DeMao, Owner,&#32;<a href="https://www.etsy.com/shop/WoodEyesWoodworks/about?ref=announce" target="blank" rel="nofollow">WoodEyesWoodworks</a></cite>
+                </div>
+
+                <div class="testimonial">
+                    <q>We&#39;ve run reddit ad campaigns for several clients and have found that these ads have proven to be a relatively inexpensive way to drive higher quality, engaged traffic to your site as well as gain a unique insight into the thoughts, questions, and concerns that your potential customers may have.</q>
+                    <cite>-Adam Hodson, President, &#32;<a href="http://www.bricksandmortarweb.com/" target="blank" rel="nofollow">Bricks &amp; Mortar Creative</a></cite>
+                </div>
+
+                <div class="testimonial">
+                    <q>The ads were extremely easy to setup and we loved the discussion our ad generated with our targeted sub board. It not only increased sales, but was a channel for valuable feedback from our consumers. </q>
+                    <cite>-Casey Allen , Co-Founder,&#32;<a href="http://www.huntgathersnack.com/" target="blank" rel="nofollow">Hunt.Gather.Snack.</a></cite>
                 </div>
             </div>
 
