Fix "-->" appearing in IE<8 due to conditional comment syntax.

--- a/r2/r2/templates/reddit.html
+++ b/r2/r2/templates/reddit.html
@@ -62,7 +62,7 @@
 
 <%def name="sr_stylesheets()">
   %if thing.subreddit_stylesheet_url:
-    <!--[if gte IE 8]> -->
+    <!--[if gte IE 8]> <!-->
     <link rel="stylesheet"
           href="${thing.subreddit_stylesheet_url}"
           title="applied_subreddit_stylesheet"
