wiki: Fix sometimes not showing compare.

--- a/r2/r2/templates/wikirevision.html
+++ b/r2/r2/templates/wikirevision.html
@@ -36,7 +36,7 @@
     %endif
     ">
     
-        %if thing.show_extended:
+        %if thing.show_compare:
             <td style="white-space: nowrap;">
                 <input type="radio" name="v1" value="${thing._id}" checked="yes">
                 <input type="radio" name="v2" value="${thing._id}" checked="yes">
