Gold payment form: update label for using creddit

--- a/r2/r2/templates/goldpayment.html
+++ b/r2/r2/templates/goldpayment.html
@@ -91,7 +91,7 @@
         onsubmit="return post_form(this, 'spendcreddits');">
     <input type="hidden" name="months" value="${thing.months}">
     <input type="hidden" name="passthrough" value="${thing.passthrough}" class="passthrough">
-    <button class="btn gold-button">${_("give")}</button>
+    <button class="btn gold-button">${_("use creddit")}</button>
     <span class="status"></span>
     <div class="throbber"></div>
   </form>
