Subreddit settings: update allow_top label

--- a/r2/r2/templates/createsubreddit.html
+++ b/r2/r2/templates/createsubreddit.html
@@ -297,7 +297,7 @@
                  %endif
           >
           <label for="allow_top">
-            ${_("allow this subreddit to be shown in the default set")}
+            ${_("allow this subreddit to be included in the default and trending lists")}
           </label>
         </li>
         <li>
