Trylater:  Enable temporary subreddit bans

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -6543,9 +6543,9 @@ body:not(.gold) .allminus-link {
 .rel-note.edited button[type=submit] { display: inline-block; }
 .rel-note.edited input[type=text] { width: 250px; margin-right: 0px; }
 
-.friend-add.edited .ban-reason { display: block; }
+.friend-add.edited .ban-details { display: block; }
 
-.ban-reason {
+.ban-details {
     display: none;
 }
 
