--- a/r2/r2/templates/promotelinkform.html
+++ b/r2/r2/templates/promotelinkform.html
@@ -369,8 +369,8 @@ ${self.javascript_setup()}
                       style="width:auto"
                       onchange="r.sponsored.on_bid_change()"
                       onkeyup="r.sponsored.on_bid_change()"
-                      value="${'%.2f' % thing.default_bid}"
-                      data-default_bid="${thing.default_bid}"
+                      value="${'%.2f' % g.default_promote_bid}"
+                      data-default_bid="${g.default_promote_bid}"
                       data-min_bid="${thing.min_bid}"
                       data-base_cpm="${thing.author.cpm_selfserve_pennies}"
                       data-geotarget_country_cpm="${g.cpm_selfserve_geotarget_country.pennies}"
