Add country code to DebugFooter.

--- a/r2/r2/templates/debugfooter.html
+++ b/r2/r2/templates/debugfooter.html
@@ -20,4 +20,4 @@
 ## reddit Inc. All Rights Reserved.
 ###############################################################################
 
-<p class="bottommenu debuginfo"><span class="icon">&pi;</span>&nbsp;<span class="content">Rendered by PID ${g.reddit_pid} on ${g.reddit_host} at ${c.start_time} running ${g.short_version}.</span></p>
+<p class="bottommenu debuginfo"><span class="icon">&pi;</span>&nbsp;<span class="content">Rendered by PID ${g.reddit_pid} on ${g.reddit_host} at ${c.start_time} running ${g.short_version} ${c.location_info}.</span></p>
