server_seconds_visibility: apply to gilding trophy

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -7089,6 +7089,12 @@ body:not(.gold) .allminus-link {
         padding-left: 20px;
         margin-right: 10px;
     }
+
+    .note {
+        font-style: italic;
+        margin-top: 10px;
+        text-align: center;
+    }
 }
 
 .comment-visits-box .title {
