Include the Number inputtype for pretty form.
@reostra

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -3800,7 +3800,6 @@ form .spacer + .spacer {
 form input[type=checkbox],
 form input[type=radio] {margin: 2px .5em 0 0; }
 
-
 .pretty-form {
     font-size: larger;
     vertical-align: top;
@@ -3812,7 +3811,8 @@ form input[type=radio] {margin: 2px .5em 0 0; }
 .pretty-form img { margin: 3px .5em}
 .pretty-form input[type=text],
 .pretty-form textarea,
-.pretty-form input[type=password] {
+.pretty-form input[type=password],
+.pretty-form input[type=number]{
     border: 1px solid gray;
     width: 300px; 
     padding: 2px;
@@ -3830,11 +3830,14 @@ form input[type=radio] {margin: 2px .5em 0 0; }
 .pretty-form input[type=text],
 .pretty-form input[type=file],
 .pretty-form input[type=password],
+.pretty-form input[type=number],
 .pretty-form select,
 .pretty-form b,
 .pretty-form textarea,
 .pretty-form button  { margin: 3px 5px; }
 .pretty-form th { text-align: right }
+.pretty-form input[type=number]  {width: 75px; }
+
 
 
 /* delete page */
