--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -6371,35 +6371,35 @@ a.pretty-button:hover { text-decoration: none !important }
     outline-style: none;
 }
 
-a.pretty-button {
+.pretty-button {
     color: black;
 }
 
-a.pretty-button.pressed {
+.pretty-button.pressed {
     color: white;
 }
 
-a.pretty-button.negative {
+.pretty-button.negative {
     background-image: url(../bg-button-negative-unpressed.png); /* SPRITE stretch-x */
 }
 
-a.pretty-button.negative.pressed {
+.pretty-button.negative.pressed {
     background-image: url(../bg-button-negative-pressed.png); /* SPRITE stretch-x */
 }
 
-a.pretty-button.neutral {
+.pretty-button.neutral {
     background-image: url(../bg-button-neutral-unpressed.png); /* SPRITE stretch-x */
 }
 
-a.pretty-button.neutral.pressed {
+.pretty-button.neutral.pressed {
     background-image: url(../bg-button-neutral-pressed.png); /* SPRITE stretch-x */
 }
 
-a.pretty-button.positive {
+.pretty-button.positive {
     background-image: url(../bg-button-positive-unpressed.png); /* SPRITE stretch-x */
 }
 
-a.pretty-button.positive.pressed {
+.pretty-button.positive.pressed {
     background-image: url(../bg-button-positive-pressed.png); /* SPRITE stretch-x */
 }
 
