Add a notice when localized default subreddits are used.
Also let users opt-out and see the global default subreddits.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -1779,6 +1779,21 @@ body.with-listing-chooser.explore-page #header .pagename {
     border-bottom: 1px solid #a73a11;
 }
 
+.locationbar {
+    margin: 5px;
+
+    .md, .md p, .options {
+        color: #888888;
+        font-weight: bold;
+        font-size: 11px;
+        display: inline;
+    }
+
+    .options {
+        margin-left: 15px;
+    }
+}
+
 /* markdown */
 .md { max-width: 60em; overflow: auto; font-size: small; }
 .md p, .md h1 { margin: 5px 0}
