Support new click and impression hashes that don't include IP.
Support new and old style hashes in verify.c and the click redirect app,
but only generate old style hashes.

--- a/r2/r2/templates/printable.html
+++ b/r2/r2/templates/printable.html
@@ -120,6 +120,10 @@ ${self.RenderPrintable()}
       data-cid="${what.campaign}"
     % endif
 
+    % if hasattr(what, 'imp_pixel'):
+      data-imp-pixel="${what.imp_pixel}"
+    % endif
+
     % if hasattr(what, 'adserver_imp_pixel'):
       data-adserver-imp-pixel="${what.adserver_imp_pixel}"
     % endif
